css/styles.css
/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 40px;
  background-color: #E5E5E5;
  /*border-top: thin solid #E5E5E5;*/
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

h4 {
  color:grey;
}

body > .container {
  padding: 60px 15px 0;
}

input {
  width:100%;
}

textarea {
  width:100%;
}

.navbar-inverse .navbar-brand {
  color:white;
}

.navbar{
  background-color: #383838;
}

.nav{
  text-align:center;
}

#copyright {
  margin: 20px 0;
  display: inline-block;
  color:#9d9d9d;
 } 

/*.footer > .container {
  padding-right: 15px;
  padding-left: 15px;
}*/

#contact {
  text-align: center;
  margin-top:11px;
  word-spacing:20px;
}

#contact i {
  font-size:25px;
}

#contact a {
  color:black;
}

#contact a:hover {
  color:white;
}

.resume {
  margin:auto;
  width: 80%;
  height: 100%;
  border-style: groove;
  border-width: 1px;
  box-sizing: border-box;
}
 
.email {
  margin:0 0 0 0;
}

.bubbles {
  position: relative;
  padding-bottom: 100%;
  height: 0;
  padding:30% 10% 30% 10%;
  overflow: hidden;
}
 
.bubbles iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}

.download {
  text-align: center;
  margin:5%;
}

.portfolio-item {
    margin-bottom: 25px;
}

.full {
  background: url(../img/beach.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

h1.home {
  font-family: 'Fjalla One', sans-serif;
  color:white;
  font-size: 4em;
}

h4.home {
  font-family: 'Fjalla One', sans-serif;
  color:black;
  font-size: 2em;
}

.links {
  word-spacing:20px;
}

.links a {
  color:white;
  text-decoration: none;
}

.links a:hover {
  color:black;
}

#merlin a{
  color:#18C67F;
  text-decoration: none;
  -webkit-text-stroke: 1px black;
}

#merlin a:hover{
  color:black;
}

.download button {
  width:25%;
}

#map1 {
  width:90%;
  height:100%;
  margin:auto;
  padding:1% 0 3% 0;
}

#map2 {
  display:none;
  width:90%;
  height:100%;
  margin:auto;
  padding:1% 0 3% 0;
}

#toggle {
  margin: 0 0 0 5%;
}

.circle {
  border-radius: 50%;
  width:300px;
  height:auto;
  display:block;
  margin:auto;
}

.places {
  text-align: center;
  margin:5%;
}

.about {
  margin: 5%;
}

.right {
  float:right;
}

.col-md-4 > ul {
  margin: 1em 0 2em -1.5em;
}

.col-md-4 > h3 {
  color:#377BB5;
  margin-bottom: 1em;
}

.col-md-4 > h4 {
  color: black;
  margin-bottom: -1em;
  font-size: 1.2em;
  font-weight:bold;
}

